fix spacing

--- a/src/Education/Education.scss
+++ b/src/Education/Education.scss
@@ -25,15 +25,17 @@
     align-items: center;
     width: 89.8vw;
     margin-bottom: 20px;
-    .course-container {
+    .course-container,
+    .course-container-1 {
       display: flex;
       flex-direction: column;
       align-items: center;
       padding-bottom: 25px;
-      margin-top: 10px;
+
       width: 100%;
       @media (min-width: 1000px) {
         width: 980px;
+        margin-top: 20px;
       }
       .title,
       .date,
@@ -110,6 +112,9 @@
         position: absolute;
         margin-top: 2vh;
       }
+    }
+    .course-container-1 {
+      margin-top: 5px;
     }
   }
 }
