--- a/src/Experience/Experience.scss
+++ b/src/Experience/Experience.scss
@@ -22,7 +22,7 @@
     justify-content: center;
     height: 45px;
     background-color: white;
-    margin-top: 20px;
+    margin-top: 10px;
     .choices {
       width: 100%;
       display: flex;
@@ -41,6 +41,7 @@
         align-items: center;
         flex-direction: column;
         color: rgba(128, 128, 128, 0.619);
+        cursor: pointer;
         .choice-active {
           width: 100%;
           height: 45px;
