--- a/src/SideBar/SideBar.scss
+++ b/src/SideBar/SideBar.scss
@@ -89,6 +89,7 @@
   .close {
     width: 32px;
     height: 32px;
+    cursor: pointer;
     @media (min-width: 1000px) {
       width: 45px;
       height: 45px;
